# MingNetTools

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Design.md  Diagram.md  Issues.md  Log.md  MING_EASTER_EGG_SYSTEM_README.md  Plan.md  README.md  Server_information.md  Structure.md  Thread.md  ming_test.html  mypy.ini  pyproject.toml
backend/: debug_ping_windows.py  debug_single_ping.py  debug_websocket_ping.py  run_stable.py  test_ttl_fix.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  performance.py  ping.py  scan.py  system.py  tcp.py  websocket.py
backend/app/core/: __init__.py  network_utils.py  performance.py  ping_tool.py  port_scanner.py  tcp_client.py  tcp_server.py
backend/app/middleware/: __init__.py  logging.py  performance.py  rate_limiting.py  security.py
backend/app/schemas/: __init__.py  common.py  ping.py  scan.py  tcp.py
backend/tests/: conftest.py
backend/tests/test_api/: __init__.py  conftest.py  test_integration.py  test_main.py  test_performance_api.py  test_ping_api.py  test_real_app_client.py  test_scan_api.py  test_schemas.py  test_simple_client.py  test_tcp_api.py  test_tcp_debug.py  test_websocket_api.py
backend/tests/test_core/: test_ping_tool.py  test_port_scanner.py  test_tcp_communication.py
docs/: UV_GUIDE.md
frontend/: .env.production  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  pingApi.ts  scanApi.ts  systemApi.ts  tcpApi.ts
frontend/src/assets/: main.css
frontend/src/components/: WelcomeItem.vue
frontend/src/components/charts/: NetworkRadar.vue
frontend/src/components/common/: AnimationSettings.vue  AudioSettings.vue  FontSettings.vue  LanguageToggle.vue  MingEasterEgg.vue  PixelPet.vue  ThemeToggle.vue  UserPreferences.vue
frontend/src/components/features/: AchievementSystem.vue
frontend/src/composables/: useWebSocketManager.ts
frontend/src/router/: index.ts
frontend/src/stores/: animation.ts  dashboard.ts  font.ts  i18n.ts  pingMonitor.ts  scanTools.ts  theme.ts
frontend/src/utils/: animationProfiler.ts  animations.ts  audioManager.ts  mingEasterEgg.ts
frontend/src/views/: ConnectionLabView.vue  DashboardView.vue  PingMonitorView.vue  ScanToolsView.vue  SettingsView.vue
